  * Added a dummy cdrecord package to ease upgrades for our users. Will get removed
    some time after etch released.
  * Cleaned debian/rules a bit.
  * wodim.links: s/cdrecord/wodim/
  * Let cdrkitt-doc conflict/replace old cdrtools-doc
  * Cleaned up postinst for wodim and removed makedev dependency.
  * debhelper level 5, Policy version 3.7.2

  [ Steve McIntyre]:
  * Minor spelling/English fixes
  * Remove __va_arg_list from format.c so alpha builds work
	
 -- Eduard Bloch <blade@debian.org>  Wed, 23 Aug 2006 22:06:28 +0200

cdrtools (4:2.01+01a03-5) unstable; urgency=low

  * Fixed the buffer size patch to cope with large ia64 page size - will
    now no longer crash at cdrecord startup. Closes: #343666.
  * Applied patch for ultra-high-speed media compatibility.
    Closes: #334677, #339423.

 -- Steve McIntyre <93sam@debian.org>  Sat,  7 Jan 2006 03:21:23 +0000

cdrtools (4:2.01+01a03-4) unstable; urgency=low

  * Updated debconf dependency to allow debconf-2.0 option.
    Closes: #331772
  * Updated Linux RAWIO patch so it doesn't break GNU/kFreeBSD
    builds, and added a separate GNU/kFreeBSD patch. Thanks to
    Robert Millan for the patches. Closes: #322597
  * Typo/spelling fixes in the cdda2wav man page. Closes: #340342. Thanks
    to A Costa for the patch.
  * Fixed a variety of other typos / spelling mistakes.
    Closes: #230652, #237519
  * Made the buffer size patch more generic, so programs other than
    cdrecord should fall back to smaller buffer sizes too if
    necessary. Closes: #271563
  * In cdda2wav, attempt to use generic SCSI commands regardless of the
    device name. Only fall back to cooked_ioctl if that fails.
    Closes: #268621
  * Removed the obnoxious delay from the Makefiles when using GNU
    make. Closes: #273663
  * Added support into mkisofs for creating bootable CDs for 4 extra
    architectures (alpha, hppa, mips and mipsel) - first half of the 
    "JTE" patch. Thanks to Ben Hutchings for help merging this.