@@ -11,28 +11,28 @@ out of the box, since there should be a symbolic link /dev/cdrw which
 points to your actual CD burner (e. g. /dev/hdb). If the link is not
 present (eg. the system is not using udev/devfs) or if you want to use a
 different burner device as default, you can configure the device in
-/etc/default/cdrecord:
+/etc/default/wodim:
 
   CDR_DEVICE=/dev/hdd
 
 would configure the default device to be /dev/hdd, i. e. the slave
 device on the secondary IDE bus.
 
-You can always override this default setting with cdrecord's "dev"
+You can always override this default setting with wodim's "dev"
 option:
 
-    cdrecord dev=/dev/hdc ...
+    wodim dev=/dev/hdc ...
 
 Only users who are in the group "cdrom" are able to burn CDs.
 If you wish to allow non-root users to write CDs then add your users to the
 cdrom group ("adduser user cdrom") and let the user completely logout and
 re-login.
-Note: with certain kernel versions cdrecord can fail with this message:
+Note: with certain kernel versions wodim can fail with this message:
 cdrecord: Operation not permitted. Cannot send SCSI cmd via ioctl
 In this case it still does need the suid bit - please send patches if you have
 identified the reason of that problem.
 
-Kernel 2.4.* (for 2.5/2.6, see below)
+Kernel 2.4.* (for 2.5/2.6, see above)
 ============
 
 Where we start:
@@ -64,24 +64,24 @@ Where we start:
       ln -s scd0 cdrom # NOTE: or cdrw, first check which drive is here
       ln -s scd1 cdrw  # NOTE: see above, maybe cdrom
    Check the new SCSI settings:
-      cdrecord -scanbus
-   Setup cdrecord's environment - edit /etc/default/cdrecord:
+      wodim -scanbus
+   Setup wodim's environment - edit /etc/default/wodim:
       CDR_DEVICE=cdrw
       cdrw=1,0,0        4       8m
       cdrom=1,2,0       0       0m
    Insert the right values, the fields are described in the manpage
-   of cdrecord. Alternatively, you may use this values as
-   cdrecord-parameter or take a frontend with an own configuration
-   scheme, then you don't need to modify /etc/default/cdrecord.
+   of wodim. Alternatively, you may use this values as
+   wodim-parameter or take a frontend with an own configuration
+   scheme, then you don't need to modify /etc/default/wodim.
    The columns must be separated by tabs.
-9. It's done! Insert a CD and try "cdrecord -v -toc". To create your first CD-ROM, try:
+9. It's done! Insert a CD and try "wodim -v -toc". To create your first CD-ROM, try:
    
-   mkisofs -v -r -J /directory/to/be/written | cdrecord -v -dummy -
+   mkisofs -v -r -J /directory/to/be/written | wodim -v -dummy -
 
-   (read cdrecord(1), "man 1 cdrecord", for details)
+   (read wodim(1), "man 1 wodim", for details)
 
 10. If you wish to allow non-root users to write CDs, you must give them 
-    permissions to do so. Run "dpkg-reconfigure cdrecord" to set suid-root 
-    permissions on the executable, then add your users to the cdrom group 
-    ("adduser user cdrom") and let the user completely logout and re-login.
+    permissions to do so. Set suid-root permissions on the executable,
+    then add your users to the cdrom group ("adduser user cdrom") and
+    let the user completely logout and re-login.
 
